--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -448,7 +448,7 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
 </p>
 <br> 
 <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
-The bacteria uses TCC as a carbon source, and TccA breaks it down further into non-toxic byproducts.<br>
+The bacteria uses TCC as a carbon source after the TccA amidase is introduced, and the bacteria itself breaks it down further into non-toxic byproducts.<br>
 Hence, we came to the conclusion to divide our design equation into the following three parts:<br>
 </p>
 <ol>
@@ -491,7 +491,7 @@ The common assumption taken into consideration for determining kinetics is that 
         In all these phases, the phase that has the growth of cells (more cell division) is in the Log phase. To calculate the growth of the microorganisms, we used the Monod kinetic equation.<br><br>
         <b>DESIGN EQUATION</b>
         <br><br>
-        The Monod kinetics equation is an empirical model suggested for the growth of microorganisms. It describes the complex process of development and biodegradation linked to growth involving multiple enzymes [3]. The Monod mathematical model is the most frequently and widely used method to describe the growth of microbes in pure and mixed cultures. Monod is used to model the growth of bacteria in the exponential (log) phase. In this phase, the bacteria divides rapidly and hence requires a lot of carbon sources, and TCC is actively used as a carbon source by our bacteria.
+        The Monod kinetics equation is an empirical model suggested for the growth of microorganisms. It describes the complex process of development and biodegradation linked to growth involving multiple enzymes [3]. The Monod mathematical model is the most frequently and widely used method to describe the growth of microbes in pure and mixed cultures. Monod is used to model the growth of bacteria in the exponential (log) phase. In this phase, the bacteria divides rapidly and hence requires a lot of carbon sources, and TCC is actively used as a carbon source by our transformed bacteria.
         <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/bioreactor-workflow.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
       </p>
   </p>
@@ -499,7 +499,7 @@ The common assumption taken into consideration for determining kinetics is that 
   <ul>
     <li>μm - maximum specific growth rate</li>
     <li>S - Concentration of the growth limiting factor or substrate</li>
-    <li>Ks - Saturation or Monod model </li>
+    <li>Ks - Half saturation constant </li>
                </ul> 
               </p> 
                <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
