--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -62,7 +62,7 @@
                       <li>
                         <a href="#section11" class="nav-link link-dark">
                           <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                          Toggling Mechanism
+                          Kill switch
                         </a>
                       </li>
 
