Changed the kill switch link to link to kill switch part of implementation

--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -212,7 +212,7 @@
           target="_blank"> safety page. </a>
         <br>
 
-        To learn more about our kill switch, <a href="https://2023.igem.wiki/mit-mahe/project-implementation"
+        To learn more about our kill switch, <a href="https://2023.igem.wiki/mit-mahe/project-implementation#section11"
           target="_blank"> click here. </a>
       </p>
 
