--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -3,7 +3,7 @@
 {% block sidebar_content %}
 {% endblock %}
 
-{% block heading %}Experiments{% endblock %}
+{% block heading %}Engineering success{% endblock %}
 
 {% block page_content %}
 
