--- a/wiki/my-menu.html
+++ b/wiki/my-menu.html
@@ -29,6 +29,7 @@
           <a class="dropdown-item" href="{{ url_for('pages', page='project-design') }}">Design</a>
           <a class="dropdown-item" href="{{ url_for('pages', page='engineering') }}">Engineering Success</a>
           <a class="dropdown-item" href="{{ url_for('pages', page='experiments') }}">Experiments</a>
+          <a class="dropdown-item" href="{{ url_for('pages', page='notebook') }}">Notebook</a>
           <a class="dropdown-item" href="{{ url_for('pages', page='hardware') }}">Hardware</a>
           <a class="dropdown-item" href="{{ url_for('pages', page='project-implementation') }}">Implementation</a>
           <a class="dropdown-item" href="{{ url_for('pages', page='model') }}">Modeling</a>
