--- a/wiki/pages/notebook.html
+++ b/wiki/pages/notebook.html
@@ -10,7 +10,7 @@
     <h2>What should this page contain?</h2>
     <hr>
     <ul>
-      <li>Chronological notes of what your team is doing.</li>
+      <li>Chronological Jessica notes of what your team is doing.</li>
       <li>Brief descriptions of daily important events.</li>
       <li>Pictures of your progress.</li>
       <li>Mention who participated in what task.</li>
