--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -349,7 +349,7 @@
 <br>
 
 <img src="https://static.igem.wiki/teams/4641/wiki/implementation/tabular-column-kill.png" class="img-fluid rounded mx-auto d-block mt-4"> <br>
-<center><b>Potential guide RNAs as generated using online tools</center><br><br>
+<center>Potential guide RNAs as generated using online tools</center><br><br>
 <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To further bolster the stability of our kill switch, we will engineer the plasmid carrying the kill switch to be antibiotic-independent for maintenance by using an alternative mechanism such as reporter genes, auxotrophic marker and host specific origin of replication. This prevents potential interference from antibiotic resistance evolution [28][29]. <br>
 <br>
 Extensive laboratory and environmental testing needs to be done, to validate the efficacy of our kill switch. The results obtained will be assessed to identify if the kill switch is activated under conditions of blue light in the environment. This will lead to selective and efficient elimination of our modified bacteria. This validation must be conducted in controlled environments as well as in simulated wastewater treatment conditions to mimic real-world scenarios.<br>
@@ -398,15 +398,15 @@ The proposed design would include a two-input system. By integrating genetic com
 <br>[16]	KAWANO, F. et al. Engineered pairs of distinct photoswitches for optogenetic control of cellular proteins. Nat. Commun. v.6 n.6256, 2015.
     <br><br><br>[17]	NIHONGAKI, Y. et al. Photoactivatable CRISPR-Cas9 for optogenetic genome editing. Nature Biotechnology v.33 p.755, 2015. VOIGT, C;CALIANDO, B. 
     <br><br><br>[18]	Targeted DNA degradation using a CRISPR device stably carried in the host genome. Nature Communications v.6 p.6989, 2015.ll
-    <br><br><br>[19]	https://2019.igem.org/Team:USTC/Kill_Switch
-    <br><br><br>[20]	https://2016.igem.org/Team:NEU-China
-    <br><br><br>[21]	https://2018.igem.org/Team:Unesp_Brazil/Design
+    <br><br><br>[19]	<a href="https://2019.igem.org/Team:USTC/Kill_Switch">https://2019.igem.org/Team:USTC/Kill_Switch</a>
+    <br><br><br>[20]	<a href="https://2016.igem.org/Team:NEU-China">https://2016.igem.org/Team:NEU-China</a>
+    <br><br><br>[21]	<a href="https://2018.igem.org/Team:Unesp_Brazil/Design">https://2018.igem.org/Team:Unesp_Brazil/Design
     <br><br><br>[22]	De Berardinis, V., Vallenet, D., Castelli, V., Besnard, M., Pinet, A., Cruaud, C., ... & Weissenbach, J. (2008). A complete collection of single‐gene deletion mutants of Acinetobacter baylyi ADP1. Molecular systems biology, 4(1), 174.
-    <br><br><br>[23]	https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/
+    <br><br><br>[23]	<a href="https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/">https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/</a>
     <br><br><br>[24]	Madeira, F., Pearce, M., Tivey, A. R., Basutkar, P., Lee, J., Edbali, O., ... & Lopez, R. (2022). Search and sequence analysis tools services from EMBL-EBI in 2022. Nucleic acids research, 50(W1), W276-W279.
     <br><br><br>[25]	Eze, E. C., El Zowalaty, M. E., & Pillay, M. (2021). Antibiotic resistance and biofilm formation of Acinetobacter baumannii isolated from high-risk effluent water in tertiary hospitals in South Africa. Journal of Global Antimicrobial Resistance, 27, 82-90.
     <br><br><br>[26]	Higgins, P. G., Hrenovic, J., Seifert, H., & Dekic, S. (2018). Characterization of Acinetobacter baumannii from water and sludge line of secondary wastewater treatment plant. Water Research, 140, 261-267.
-    <br><br><br>[27]	https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE
+    <br><br><br>[27]	<a href="https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE">https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE</a>
     <br><br><br>[28]	Hägg, P., de Pohl, J. W., Abdulkarim, F., & Isaksson, L. A. (2004). A host/plasmid system that is not dependent on antibiotics and antibiotic resistance genes for stable plasmid maintenance in Escherichia coli. Journal of biotechnology, 111(1), 17-30.
     <br><br><br>[29]	Kim, S. K., Kim, H., Woo, S. G., Kim, T. H., Rha, E., Kwon, K. K., ... & Lee, D. H. (2022). CRISPRi-based programmable logic inverter cascade for antibiotic-free selection and maintenance of multiple plasmids. Nucleic acids research, 50(22), 13155-13171.
     <br><br><br>[30]Rottinghaus, A. G., Ferreiro, A., Fishbein, S. R., Dantas, G., & Moon, T. S. (2022). Genetically stable CRISPR-based kill switches for engineered microbes. Nature communications, 13(1), 672.
