--- a/wiki/pages/hardware.html
+++ b/wiki/pages/hardware.html
@@ -144,7 +144,7 @@
       <p class="mt-5 sub-stuff">The wavelength was identified as  = 834.9185474 nm. In order to acquire the specific wavelength, we plan on using an <b>IR filter</b> of wavelength range <b>820 to 840 nm</b>. Additionally,  A <b>silicon PIN photodiode</b> within the <b>range 350 to 1100 nm</b> was selected. A microcontroller attached to this photodiode would wirelessly transmit the data to a software which would be programmed to quantify triclocarban using the standard calibration curve.
 </p>
       <img src="https://static.igem.wiki/teams/4641/wiki/hardware/ln-conc-vs-intensity-graph.jpeg" class="img-fluid" style="scale:0.7;">
-      <p class="sub-stuff" style="text-align:center;"><b>Figure 10:</b> ln-conc-vs-intensity-graph [9]</p>
+      <p class="sub-stuff" style="text-align:center;"><b>Figure 10:</b> ln conc vs intensity graph [9]</p>
       <br><br>
       <div class="ratio ratio-16x9">
               <iframe src="https://static.igem.wiki/teams/4641/wiki/hardware/h-s-wiki-notebook-docx.pdf"
