--- a/wiki/pages/notebook.html
+++ b/wiki/pages/notebook.html
@@ -6,7 +6,7 @@
 
                             <div class="content">
                               <div class="m-5 mb-16">
-                                <p class="mt-5 MAIN-STUFF" id="section1">GROWTH CURVE<br></p>
+                                <p class="mt-5 MAIN-STUFF" id="section1">Growth Curve<br></p>
                                 <button  class="modal-button" onclick="openModal('modal1')">WEEK 1</button> 
                                   <div id="modal1" class="modal">
                                     <div class="modal-content">
