--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -365,52 +365,50 @@ The proposed design would include a two-input system. By integrating genetic com
                          <p class="mt-5 MAIN-STUFF" id="section12">References<br></p>
                          <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
                           [1]Yun, H., Liang, B., Qiu, J., Zhang, L., Zhao, Y., Jiang, J., & Wang, A. (2017). Functional characterization of a novel amidase involved in biotransformation of triclocarban and its dehalogenated congeners in Ochrobactrum sp. TCC-2. Environmental Science & Technology, 51(1),291-300. <a href="https://doi.org/10.1021/acs.est.6b04885">https://doi.org/10.1021/acs.est.6b04885</a>
-                          <br><br><br>
+                          <br>
                           [2] Subedi, B., Balakrishna, K., Joshua, D. I., & Kannan, K. (2017). Mass loading and removal of pharmaceuticals and personal care products including psychoactives, antihypertensives, and antibiotics in two sewage treatment plants in southern India. Chemosphere, 167, 429-437. <a href="https://doi.org/10.1016/j.chemosphere.2016.10.026">https://doi.org/10.1016/j.chemosphere.2016.10.026</a> 
-                          <br><br><br>
+                          <br>
                           [3]Jenjaiwit, S., Supanchaiyamat, N., Hunt, A. J., Ngernyen, Y., Ratpukdi, T., & Siripattanakul-Ratpukdi, S. (2021). Removal of triclocarban from treated wastewater using cell-immobilized biochar as a sustainable water treatment technology. Journal of Cleaner Production, 320, 128919. <a href="https://doi.org/10.1016/j.jclepro.2021.128919">https://doi.org/10.1016/j.jclepro.2021.128919</a>
-                          <br><br><br>
+                          <br>
                           [4]Mohammadi, A. (2021). Overview of the benefits and challenges associated with pelletizing biochar. Processes, 9(9), 1591<a href="https://doi.org/10.3390/pr9091591">https://doi.org/10.3390/pr9091591</a>
-                          <br><br><br>
+                          <br>
                           [5]Hu, Q., Shao, J., Yang, H., Yao, D., Wang, X., & Chen, H. (2015). Effects of binders on the properties of bio-char pellets. Applied Energy, 157,508-516.<a href="https://doi.org/10.1016/j.apenergy.2015.05.019">https://doi.org/10.1016/j.apenergy.2015.05.019</a>
-                          <br><br><br>
+                          <br>
                           [6]Villora, J. M., Baudín, C., Callejas, P., & Flora Barba, M. (2004). Influence of the processing route on reliability of Raschig rings for wastewater treatments. Key Engineering Materials, 264, 2437-2440.<a href="https://doi.org/10.4028/www.scientific.net/KEM.264-268.2437">https://doi.org/10.4028/www.scientific.net/KEM.264-268.2437</a>
-                          <br><br><br>
+                          <br>
                           [7]Salvi, S., & Paranjape, A. P. (2017, February). Comparison of different types of Raschig rings. In 2017 Third International Conference on Advances in Electrical, Electronics, Information, Communication and Bio-Informatics (AEEICB) (pp. 56-60). IEEE.<a href="https://doi.org/10.1109/AEEICB.2017.7972383">https://doi.org/10.1109/AEEICB.2017.7972383</a>
-                          <br><br><br>
+                          <br>
                           [8]Jenjaiwit, S., Supanchaiyamat, N., Hunt, A. J., Ngernyen, Y., Ratpukdi, T., & Siripattanakul-Ratpukdi, S. (2021). Removal of triclocarban from treated wastewater using cell-immobilized biochar as a sustainable water treatment technology. Journal of Cleaner Production, 320, 128919.<a href="https://doi.org/10.1016/j.jclepro.2021.128919">https://doi.org/10.1016/j.jclepro.2021.128919</a>
-                          <br><br><br>
+                          <br>
                           [9] Obtained from IQS Directory : <a href="https://www.iqsdirectory.com/articles/pressure-gauge.html#:~:text=Pressure%20gauges%20are%20an%20essential,of%20pressure%20in%20a%20system.">https://www.iqsdirectory.com/articles/pressure-gauge.html#:~:text=Pressure%20gauges%20are%20an%20essential,of%20pressure%20in%20a%20system. </a> 
-                          <br><br><br>
+                          <br>
                           [10] Obtained from Tamson: <a href="https://tameson.com/pages/pressure-gauge-selection#:~:text=The%20following%20are%20common%20types,and%20are%20not%20highly%20viscous.">https://tameson.com/pages/pressure-gauge-selection#:~:text=The%20following%20are%20common%20types,and%20are%20not%20highly%20viscous.</a> 
-                          <br><br><br>
+                          <br>
                           [11] Shi, Y., Chen, H., Chen, W., Ye, G., Qu, J., Li, J., ... & Duan, X. (2023). Effects of particle shape and packing style on ethylene oxidation reaction using particle-resolved CFD simulation. Particuology, 82, 87-97 <a href="https://doi.org/10.1016/j.partic.2023.01.012">https://doi.org/10.1016/j.partic.2023.01.012</a>
-                          <br><br><br>
+                          <br>
                           [12] Dai, G., Huangfu, J., Wang, X., Du, S., & Zhao, T. (2023). A Review of Radiative Heat Transfer in Fixed-Bed Particle Solar Receivers. Sustainability, 15(13), 9918 <a href="https://doi.org/10.3390/su15139918">https://doi.org/10.3390/su15139918</a>
-                          <br><br><br>
+                          <br>
                           [13] Alsawy, T., Rashad, E., El-Qelish, M. et al. A comprehensive review on the chemical regeneration of biochar adsorbent for sustainable wastewater treatment. npj Clean Water 5, 29 (2022). <a href="https://doi.org/10.1038/s41545-022-00172-3">https://doi.org/10.1038/s41545-022-00172-3</a>
-                          <br><br><br>
+                          <br>
                           [14] Yingjie Dai, Naixin Zhang, Chuanming Xing, Qingxia Cui, Qiya Sun, The adsorption, regeneration and engineering applications of biochar for removal organic pollutants: A review,Chemosphere,Volume 223,2019,Pages 12-27,ISSN 0045-6535, <a href="https://doi.org/10.1016/j.chemosphere.2019.01.161.">https://doi.org/10.1016/j.chemosphere.2019.01.161.</a> 
-                          <br><br><br>
+                          <br>
                           [15]  M. A. Alkhaldi (2018) Estimation of boiling points by investigations of viscosity Arrhenius behaviours in Methyl Benzoate + n-Hexane binary liquid systems at atmospheric pressure, Physics and Chemistry of Liquids, 56:2, 250-265,<a href="https://doi.org/10.1080/00319104.2017.1327582">https://doi.org/10.1080/00319104.2017.1327582</a>
-<br>
-<br>
 <br>[16]	KAWANO, F. et al. Engineered pairs of distinct photoswitches for optogenetic control of cellular proteins. Nat. Commun. v.6 n.6256, 2015.
-    <br><br><br>[17]	NIHONGAKI, Y. et al. Photoactivatable CRISPR-Cas9 for optogenetic genome editing. Nature Biotechnology v.33 p.755, 2015. VOIGT, C;CALIANDO, B. 
-    <br><br><br>[18]	Targeted DNA degradation using a CRISPR device stably carried in the host genome. Nature Communications v.6 p.6989, 2015.ll
-    <br><br><br>[19]	<a href="https://2019.igem.org/Team:USTC/Kill_Switch">https://2019.igem.org/Team:USTC/Kill_Switch</a>
-    <br><br><br>[20]	<a href="https://2016.igem.org/Team:NEU-China">https://2016.igem.org/Team:NEU-China</a>
-    <br><br><br>[21]	<a href="https://2018.igem.org/Team:Unesp_Brazil/Design">https://2018.igem.org/Team:Unesp_Brazil/Design
-    <br><br><br>[22]	De Berardinis, V., Vallenet, D., Castelli, V., Besnard, M., Pinet, A., Cruaud, C., ... & Weissenbach, J. (2008). A complete collection of single‐gene deletion mutants of Acinetobacter baylyi ADP1. Molecular systems biology, 4(1), 174.
-    <br><br><br>[23]	<a href="https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/">https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/</a>
-    <br><br><br>[24]	Madeira, F., Pearce, M., Tivey, A. R., Basutkar, P., Lee, J., Edbali, O., ... & Lopez, R. (2022). Search and sequence analysis tools services from EMBL-EBI in 2022. Nucleic acids research, 50(W1), W276-W279.
-    <br><br><br>[25]	Eze, E. C., El Zowalaty, M. E., & Pillay, M. (2021). Antibiotic resistance and biofilm formation of Acinetobacter baumannii isolated from high-risk effluent water in tertiary hospitals in South Africa. Journal of Global Antimicrobial Resistance, 27, 82-90.
-    <br><br><br>[26]	Higgins, P. G., Hrenovic, J., Seifert, H., & Dekic, S. (2018). Characterization of Acinetobacter baumannii from water and sludge line of secondary wastewater treatment plant. Water Research, 140, 261-267.
-    <br><br><br>[27]	<a href="https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE">https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE</a>
-    <br><br><br>[28]	Hägg, P., de Pohl, J. W., Abdulkarim, F., & Isaksson, L. A. (2004). A host/plasmid system that is not dependent on antibiotics and antibiotic resistance genes for stable plasmid maintenance in Escherichia coli. Journal of biotechnology, 111(1), 17-30.
-    <br><br><br>[29]	Kim, S. K., Kim, H., Woo, S. G., Kim, T. H., Rha, E., Kwon, K. K., ... & Lee, D. H. (2022). CRISPRi-based programmable logic inverter cascade for antibiotic-free selection and maintenance of multiple plasmids. Nucleic acids research, 50(22), 13155-13171.
-    <br><br><br>[30]Rottinghaus, A. G., Ferreiro, A., Fishbein, S. R., Dantas, G., & Moon, T. S. (2022). Genetically stable CRISPR-based kill switches for engineered microbes. Nature communications, 13(1), 672.
-    <br><br><br>[31]	Stirling, F., Bitzan, L., O’Keefe, S., Redfield, E., Oliver, J. W., Way, J., & Silver, P. A. (2017). Rational design of evolutionarily stable microbial kill switches. Molecular cell, 68(4), 686-697.
+    <br>[17]	NIHONGAKI, Y. et al. Photoactivatable CRISPR-Cas9 for optogenetic genome editing. Nature Biotechnology v.33 p.755, 2015. VOIGT, C;CALIANDO, B. 
+    <br>[18]	Targeted DNA degradation using a CRISPR device stably carried in the host genome. Nature Communications v.6 p.6989, 2015.ll
+    <br>[19]	<a href="https://2019.igem.org/Team:USTC/Kill_Switch">https://2019.igem.org/Team:USTC/Kill_Switch</a>
+    <br>[20]	<a href="https://2016.igem.org/Team:NEU-China">https://2016.igem.org/Team:NEU-China</a>
+    <br>[21]	<a href="https://2018.igem.org/Team:Unesp_Brazil/Design">https://2018.igem.org/Team:Unesp_Brazil/Design
+    <br>[22]	De Berardinis, V., Vallenet, D., Castelli, V., Besnard, M., Pinet, A., Cruaud, C., ... & Weissenbach, J. (2008). A complete collection of single‐gene deletion mutants of Acinetobacter baylyi ADP1. Molecular systems biology, 4(1), 174.
+    <br>[23]	<a href="https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/">https://www.genoscope.cns.fr/cgi-bin/ggb/thesaurus/gbrowse/thesaurus/</a>
+    <br>[24]	Madeira, F., Pearce, M., Tivey, A. R., Basutkar, P., Lee, J., Edbali, O., ... & Lopez, R. (2022). Search and sequence analysis tools services from EMBL-EBI in 2022. Nucleic acids research, 50(W1), W276-W279.
+    <br>[25]	Eze, E. C., El Zowalaty, M. E., & Pillay, M. (2021). Antibiotic resistance and biofilm formation of Acinetobacter baumannii isolated from high-risk effluent water in tertiary hospitals in South Africa. Journal of Global Antimicrobial Resistance, 27, 82-90.
+    <br>[26]	Higgins, P. G., Hrenovic, J., Seifert, H., & Dekic, S. (2018). Characterization of Acinetobacter baumannii from water and sludge line of secondary wastewater treatment plant. Water Research, 140, 261-267.
+    <br>[27]	<a href="https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE">https://sg.idtdna.com/site/order/designtool/index/CRISPR_SEQUENCE</a>
+    <br>[28]	Hägg, P., de Pohl, J. W., Abdulkarim, F., & Isaksson, L. A. (2004). A host/plasmid system that is not dependent on antibiotics and antibiotic resistance genes for stable plasmid maintenance in Escherichia coli. Journal of biotechnology, 111(1), 17-30.
+    <br>[29]	Kim, S. K., Kim, H., Woo, S. G., Kim, T. H., Rha, E., Kwon, K. K., ... & Lee, D. H. (2022). CRISPRi-based programmable logic inverter cascade for antibiotic-free selection and maintenance of multiple plasmids. Nucleic acids research, 50(22), 13155-13171.
+    <br>[30]Rottinghaus, A. G., Ferreiro, A., Fishbein, S. R., Dantas, G., & Moon, T. S. (2022). Genetically stable CRISPR-based kill switches for engineered microbes. Nature communications, 13(1), 672.
+    <br>[31]	Stirling, F., Bitzan, L., O’Keefe, S., Redfield, E., Oliver, J. W., Way, J., & Silver, P. A. (2017). Rational design of evolutionarily stable microbial kill switches. Molecular cell, 68(4), 686-697.
     
     </p>
                            </p>
