Added video and images. Fixed font.

--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -1,7 +1,7 @@
 {% extends "my-layout.html" %}
   
 {% block sidebar_content %}
-<ul class="nav nav-pills flex-column mb-auto">
+<ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="nav nav-pills flex-column mb-auto">
               <li class="nav-item">
                 <a href="#section1" class="nav-link link-dark" aria-current="page">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
@@ -69,13 +69,13 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
             <p class="mt-5 sub-stuff"> Our team members come from different states of India, adding great diversity to our team. Being inclusive of the community has been one of our primary goals from the very beginning of the project. During the initial ideation of the project, we put in considerable effort to understand the preferred pronouns of our fellow teammates. The diversity that we bring to the table with various cultures and regions has been something of great help to us, providing us a chance to learn more about the others.<br> </p>
 
-            <img class="img-fluid" style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
+            <img class="img-fluid" style="scale:0.69;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
 
             <p class="mt-5 MAIN-STUFF" id="section3"><b>Crossing Language Barriers</b></p>
 
             <p class="mt-5 sub-stuff"> India has 22 official languages with hundreds of regional dialects with its own layers of dynamics in cultural and social diversity. Access to scientific information should not be restricted by these language barriers. Regional languages bridge these gaps, ensuring individuals from diverse linguistic backgrounds can access and contribute to scientific knowledge. We can empower communities to understand and apply scientific findings to their contexts, fostering sustainable practices and development.<br> </p>
 
-            <ul class="mt-5 sub-stuff">
+            <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
                 <li>We interacted with local stakeholders in <b>various languages</b> like Hindi, Tamil, Bengali, Kannada and Odia to explain our project idea to them and get their genuine opinions on our implementation strategy.</li>
                 <li>We also conducted education programs in local languages like Tamil and Kannada to increase engagement among various groups. Our education visits were not restricted to schools in Manipal; we have taught students in schools across many states of India</li>
                 <li>We have gone a step further and collaborated with India Literacy Project. This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. We <b>translated our educational content</b> on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus and be taught at over 14,102 schools across India through the India Literacy project as optional additional content; this gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community.</li>
@@ -117,7 +117,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
             <p class="mt-5 sub-stuff"> Differently abled people and people with neurodivergence are often left out of scientific education for various reasons; this often means that advancements in science and technology are often only accessible to abled people, and persons with disabilities often find it challenging to integrate into and contribute to STEM communities. We attempted to reach out to as many sections of society as possible, tailoring our approach to better fit certain groups.<br><br> </p>
 
-            <ul>
+            <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
                 <li>In order to make sure that science reaches the specially-abled too, we visited “ASARE”- a center for autistic and learning disorders. There, we engaged in a fun coloring activity and performed a skit in a regional language, Kannada to convey our project to them in simple terms. We used graphical illustrations of soap, a toxic chemical (triclocarban) and a good bacteria to explain how our genetically modified bacteria would degrade the harmful chemicals present in daily use products like handwash, detergents and several others. The people loved all the activities and interacted with us. We also had a music and dance performance by a few of our team members to draw their attention and keep them involved. Followed by this, they even performed a dance out of their happiness for us and greeted us with “thank you” in the sweetest ways possible.  <br><br> </li>
             </ul>
 
@@ -154,7 +154,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   </button>
 </div>
 
-<ul class="mt-5 sub-stuff">
+<ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>Much education and outreach rely primarily on visual aids; this makes it difficult for those with visual impairment to understand or contribute to science adequately. We decided to use music to communicate scientific concepts so that it would be accessible to those with visual disabilities while appealing to those with non-scientific backgrounds. We collaborated with musicians to create a composition using the amino acids comprising our protein tccA amidase as a basis for the notes in the sequence; this also allowed us to communicate biological concepts such as codons, protein construction, and modification using musical analogies that most people understand. It was an interactive approach to spark curiosity about science within the minds of the non-scientific community.<br><br></li>
     </ul>
 
@@ -162,7 +162,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
     <p class="mt-5 sub-stuff"> Our team comprises students from different regions of India, and our interaction with people made us realize the importance of reaching out to <b>various regional populations</b>. Our goal is to make science accessible to all. We used media as a means to communicate with a wider variety of audience ranging from the youth to senior citizens with no barriers created by the community. </p>
 
-    <ul class="mt-5 sub-stuff">
+    <ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>We created a series of SynBio comic strips to ensure that the world of synthetic biology reaches a considerable audience. </li>
     </ul>
 
@@ -170,12 +170,12 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
           <iframe src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbiocomicstrip.pdf" allowfullscreen></iframe>
     </div>
 
-      <ul class="mt-5 sub-stuff>
+      <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>We also posted a “Series on Synthetic Biology Applications” which had three episodes highlighting the latest unique advancements in synthetic biology to spark curiosity in the minds of our fellow social media users.</li>
       </ul>
 
       <img class="mt-5 img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
-      <ul class="mt-5 sub-stuff">
+      <ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>Not only this, we also had a set of five articles published on Medium relating to various aspects of synthetic biology. It would help broaden the horizons of the general public around us and emphasize how synthetic biology is not just limited to GMOs, but also has applications in numerous fields.</li>
       </ul>
 
@@ -209,7 +209,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 <p class="sub-stuff" style="text-align:center"> Online blog series published on Medium </p>
 
 
-<ul class="mt-5 sub-stuff">
+<ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
   <li>We also conducted a “Bioremediation Conclave” in collaboration with iGEM IIT-Delhi in order to emphasize on the applications of synthetic biology in bioremediation in front of  a wider audience. Around 50 participants attended the conclave from all over the globe and from various iGEM teams participating under the bioremediation track. It was an overall learning experience for all the attendees, adding onto their knowledge and sparking new ideas.</li>
 </ul>
 
@@ -223,14 +223,17 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 <p class="mt-5 sub-stuff"> Science, like any other field, involves creativity and innovation. Science is incorporated everywhere, be it music or artwork. In an attempt to interact with the non-scientific community and bring out the creative aspects of synthetic biology, our team put in substantial efforts.<br> </p>
 
 
-<ul class="mt-5 sub-stuff">
-  <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons.</li>
+<ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
+  <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons.<br>
+  <iframe title="MIT-MAHE: Music Composition of Amidase (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/59fd1533-80ac-4416-bb5c-2a6e73795c86" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+  </li>
   <li>We hosted a “BioArt Competition”, in collaboration with IIT-Delhi, based on the applications of synthetic biology and solving real-world problems using traditional, indigenous and folk art styles. This helped encourage our rich heritage and brought out the diversity among the nations. The participants showcased their bioart while also describing the thoughts behind their design.</li>
 </ul>
-<video src="https://video.igem.org/w/c7vmZysi4VUPx52ac1vVww">
 <figure>
 <img class="img-fluid"  style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
 <figcaption style="text-align:center">BioArt Competition held in collaboration with team iGEM IIT-Delhi </figcaption>
+<img class="img-fluid"  style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
+<figcaption style="text-align:center">Winner of BioArt Competition</figcaption>
 
 </figure>
         </div>
