--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -1,6 +1,48 @@
 {% extends "my-layout.html" %}
 
 {% block sidebar_content %}
+<ul class="nav nav-pills flex-column mb-auto">
+  <li class="nav-item">
+    <a href="#section1" class="nav-link link-dark" aria-current="page">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#home" />
+      </svg>
+      Module 0
+    </a>
+  </li>
+  <li>
+    <a href="#section2" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#speedometer2" />
+      </svg>
+      Module 1
+    </a>
+  </li>
+  <li>
+    <a href="#section3" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#table" />
+      </svg>
+      Module 2
+    </a>
+  </li>
+  <li>
+    <a href="#section4" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#table" />
+      </svg>
+      Module 3
+    </a>
+  </li>
+  <li>
+    <a href="#section5" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#grid" />
+      </svg>
+      Module 4
+    </a>
+  </li>
+
 {% endblock %}
 
 {% block heading %}Engineering success{% endblock %}
