--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -266,7 +266,16 @@
                    <br><br>
                    <p class="mt-5 MAIN-STUFF" id="section8">Future Implementation<br></p>
                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
-                    Industrial scale-up of such a bioreactor faces multiple hurdles, including quantifying the required amount of biochar and mass manufacturing of the Raschig ring to fill the packed bed. To overcome these issues, we propose a fluidized bed batch bioreactor as our future implementation, which will utilize a lesser number of rings and also increase the mass transfer and mixing of the sludge with the biochar Raschig ring. We propose using a sparger to regulate sludge flow within the fluidized bed bioreactor to ensure a continuous sludge flow, as the viscosity of the sludge we are treating is almost equal to that of water. 
+                     Our future roadmap involves offering our TCC biodegradation solution to wastewater treatment plants (WWTPs) seeking efficient micropollutant removal.<br><br>
+
+We'll commence with pilot testing in partnership with select WWTPs, using real-world data to optimize our system. Once its effectiveness is demonstrated at the pilot scale, we will proceed with scaling up the technology to cater to larger WWTPs. Customization is key; our solutions will be tailored to meet the specific operational requirements of each WWTP. We'll underscore the potential for substantial cost savings and highlight the environmental benefits derived from our technology.<br><br>
+Industrial scale-up of such a bioreactor faces multiple hurdles, including quantifying the required amount of biochar and mass manufacturing of the Raschig ring to fill the packed bed. To overcome these issues, we propose a fluidized bed batch bioreactor as our future implementation, which will utilize a lesser number of rings and also increase the mass transfer and mixing of the sludge with the biochar Raschig ring. We propose using a sparger to regulate sludge flow within the fluidized bed bioreactor to ensure a continuous sludge flow, as the viscosity of the sludge we are treating is almost equal to that of water. <br><br>
+
+Moreover, we will position our solution as not just compliant with current environmental regulations but also as a proactive measure to address potential future restrictions on micropollutants. We will create safety guides for the usage of our project as advised by Akshara Gopinath as well.<br><br>
+
+To build credibility in the wastewater treatment sector, we will seek strategic collaborations with industry associations and environmental agencies, further endorsing our technology.
+Our ultimate goal is to establish ourselves as a standard and set a new practice in the effort to protect the environment and water quality, resulting in cleaner rivers and a healthier planet.<br><br>
+
                      </p>
                      <p class="mt-5 MAIN-STUFF" id="section9"><br>Regeneration of biochar</p>
                      <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
